[package]
authors = ["Fabrice Desré <fabrice@desre.org>"]
edition = "2018"
name = "costaeres"
version = "0.1.0"

[dependencies]
async-std = {version = "1.9", features = ["attributes"]}
async-trait = "0.1"
bincode = "1.3"
chrono = {version = "0.4", features = ["serde"]}
futures = "0.3"
log = "0.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sqlx = {version = "0.5", features = ["runtime-async-std-rustls", "migrate", "sqlite", "chrono"]}
thiserror = "1.0"
toml = "0.5"

[dev-dependencies]
env_logger = "0.8"
