[package]
authors = ["Fabrice Desré <fabrice@desre.org>"]
edition = "2018"
license = "AGPL-3.0-only"
name = "costaeres"
version = "0.1.0"

[dependencies]
async-std = {version = "1.9", features = ["attributes"]}
async-trait = "0.1"
bincode = "1.3"
chrono = {version = "0.4", features = ["serde"]}
futures = "0.3"
lazy_static = "1.4"
libsqlite3-sys = "*"
log = "0.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sqlx = {version = "0.5", features = ["runtime-async-std-rustls", "migrate", "sqlite", "chrono"]}
thiserror = "1.0"
toml = "0.5"
uuid = {version = "0.8", features = ["v4"]}

[dev-dependencies]
env_logger = "0.8"
